WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67991
Web Inspector: [v8] building call frame info for location-less internal script function crashes.
https://bugs.webkit.org/show_bug.cgi?id=67991
Summary
Web Inspector: [v8] building call frame info for location-less internal scrip...
Pavel Feldman
Reported
2011-09-13 01:57:23 PDT
Patch to follow.
Attachments
Patch
(7.22 KB, patch)
2011-09-13 02:35 PDT
,
Pavel Feldman
yurys
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2011-09-13 02:35:59 PDT
Created
attachment 107157
[details]
Patch
Ilya Tikhonovsky
Comment 2
2011-09-13 02:46:14 PDT
Comment on
attachment 107157
[details]
Patch lgtm
Yury Semikhatsky
Comment 3
2011-09-13 03:35:13 PDT
Comment on
attachment 107157
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=107157&action=review
> Source/WebCore/bindings/v8/ScriptDebugServer.cpp:254 > + v8::TryCatch tryCatch;
What's the purpose of the trycatch here? The next call is not supposed to throw
Pavel Feldman
Comment 4
2011-09-13 04:16:18 PDT
> What's the purpose of the trycatch here? The next call is not supposed to throw
I'm fixing the reproducible crash originating from the next call. Although it does not crash anymore due to the changes in the DebuggerScript.js, I'd like to put the try / catch here in order to cover potential changes to the javascript API that DebuggerScript is using.
Yury Semikhatsky
Comment 5
2011-09-13 11:39:48 PDT
(In reply to
comment #4
)
> > What's the purpose of the trycatch here? The next call is not supposed to throw > > I'm fixing the reproducible crash originating from the next call. Although it does not crash anymore due to the changes in the DebuggerScript.js, I'd like to put the try / catch here in order to cover potential changes to the javascript API that DebuggerScript is using.
Putting try/catch there will only make finding such problems, I suggest you revert this part.
Pavel Feldman
Comment 6
2011-09-14 02:28:41 PDT
Committed
r95083
: <
http://trac.webkit.org/changeset/95083
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug